<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [<!ENTITY app_name "AutoQue">]>
<resources>

    <string name="app_name">&app_name;</string>
    <string name="authentication">Autofill authentication</string>

    <string name="authenticate">Authenticate?</string>
    <string name="authenticate_yes">Yes</string>
    <string name="authenticate_no">No</string>

    <string name="autofill_service_injected">Autofill Service injected</string>
    <string name="autofill_service_not_injected">Autofill Service not injected</string>

    <string name="autofill_service_selected">AutoQue Autofill Service selected</string>
    <string name="autofill_service_not_selected">AutoQue Autofill Service not selected</string>
    <string name="autofill_service_selection_canceled">AutoQue Autofill Service selection canceled</string>

    <string name="loading">Loading&#8230;</string>
    <string name="logical_error">Something went wrong :(</string>
    <string name="error">Something went completely wrong :(</string>

    <string name="no_entries">No entries yet :( Swipe to refresh</string>

    <string name="regular_notification_channel_name">Notifications</string>
    <string name="popup_notification_channel_name">Popups</string>
    <string name="popup_notification_channel_description">Allow showing hints</string>

</resources>
