<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:text="@string/loading"
        android:textColor="@color/faf_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/label_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:text="@string/logical_error"
        android:textColor="@color/faf_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/label_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:text="@string/no_entries"
        android:textColor="@color/faf_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_accounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>