<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:importantForAutofill="noExcludeDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightest_gray"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/authenticate"
            android:textColor="@color/primary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no_auth_btn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@color/primary"
                android:text="@string/authenticate_no"
                android:textColor="@color/text_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yes_auth_btn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/primary"
                android:text="@string/authenticate_yes"
                android:textColor="@color/text_light"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>